tests/Support/override/classes/error/response/ProductionErrorPage.php
<?php

namespace Thirtybees\Core\Error\Response;

class ProductionErrorPage extends ProductionErrorPageCore
{

}
